--- a/_MOB_paper.bib
+++ b/_MOB_paper.bib
@@ -14,7 +14,8 @@ journal = {Psychological Methods},
 title = {{Interpretable machine learning for psychological research: Opportunities and pitfalls}},
 year = {2023}
 }
-{StycyAntr21,
+
+@article{StycyAntr21,
   title={Are ratings in the eye of the beholder? A non-technical primer on many facet {R}asch measurement to evaluate rater effects on teacher behavior rating scales},
   author={Styck, Kara M and Anthony, Christopher J and Flavin, Angela and Riddle, David and LaBelle, Brittany},
   journal={Journal of School Psychology},
@@ -22,6 +23,30 @@ year = {2023}
   pages={198--221},
   year={2021},
   publisher={Elsevier}
+}
+
+@article{FokkyEdbr21,
+  title={Generalized linear mixed-model (GLMM) trees: A flexible decision-tree method for multilevel and longitudinal data},
+  author={Fokkema, Marjolein and Edbrooke-Childs, Julian and Wolpert, Miranda},
+  journal={Psychotherapy Research},
+  volume={31},
+  number={3},
+  pages={329--341},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+
+
+@book{RaudyBush02,
+  title={Hierarchical linear models: Applications and data analysis methods (2nd ed.)},
+  author={Raudenbush, Stephen W and Bryk, Anthony S},
+  volume={1},
+  year={2002},
+
+  publisher={Sage},
+address={Thousand Oaks, CA}
+}
+
 
 @article{FokkyZeil23,
   title={Subgroup detection in linear growth curve models with generalized linear mixed model {(GLMM)} trees},
